--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -116,5 +116,6 @@
 <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
         crossorigin="anonymous"></script>
 <script th:src="@{/js/datatables-simple-demo.js}"></script>
+<th:block layout:fragment="script"></th:block>
 </body>
 </html>
