--- a/src/main/resources/templates/sinhvien/sinhvien-add.html
+++ b/src/main/resources/templates/sinhvien/sinhvien-add.html
@@ -6,71 +6,128 @@
 >
 <head>
     <title>Sinh viên</title>
+    <style>
+        .img-preview {
+            border: 2px dashed #adadad;
+            width: 100%;
+            height: 100%;
+            min-height: 300px;
+            color: white;
+            font-size: 16px;
+            position: relative;
+            border-radius: 6px;
+            overflow: hidden;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-direction: column;
+            cursor: pointer;
+        }
+
+        .img-preview img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 1;
+        }
+    </style>
 </head>
 <body>
-<div layout:fragment="mainContent">
+<div layout:fragment="mainContent" class="container">
     <h1 class="mt-4">Thêm Sinh viên</h1>
-    <div class="row">
-        <form role="form" th:action="@{/sinhvien/sinhvien-add}" method="POST" th:object="${sinhvien}" >
-            <div class="form-row">
-                <div class="form-group col-md-6">
-                    <label class="my-2" for="maSV">Mã Sinh Viên</label>
-                    <input
-                            type="text"
-                            class="form-control"
-                            id="maSV"
-                            name="maSV"
-                            th:field="*{maSV}"
-                            placeholder="21IT363">
-                </div>
-                <div class="form-group col-md-6">
-                    <label class="my-2" for="hoVaTen">Họ và tên</label>
-                    <input
-                            type="text"
-                            class="form-control"
-                            id="hoVaTen"
-                            name="hoVaTen"
-                            th:field="*{hoVaTen}"
-                            placeholder="Hồ Đăng Nguyện">
-                </div>
-                <div class="form-group col-md-6">
-                    <label class="my-2" for="email">Email</label>
-                    <input
-                            type="email"
-                            class="form-control"
-                            id="email"
-                            name="email"
-                            th:field="*{email}"
-                            placeholder="hdnguyen.dev@gmail.com">
-                </div>
-                <div class="form-group col-md-6">
-                    <label class="my-2" for="soDT">Số Điện Thoại</label>
-                    <input
-                            type="text"
-                            class="form-control"
-                            id="soDT"
-                            name="soDT"
-                            th:field="*{soDT}"
-                            placeholder="0387672103">
-                </div>
-                <div class="form-group col-md-6">
-                    <label class="my-2" for="diaChi">Địa chỉ</label>
-                    <input
-                            type="text"
-                            class="form-control"
-                            id="diaChi"
-                            name="diaChi"
-                            th:field="*{diaChi}"
-                            placeholder="Đà Nẵng">
-                </div>
+    <form
+            class="row"
+            role="form" th:action="@{/sinhvien/sinhvien-add}" method="POST" th:object="${sinhvien}"
+            enctype="multipart/form-data">
+        <div class="col-md-6 my-2">
 
+            <div class="form-group ">
+                <label class="my-2" for="maSV">Mã Sinh Viên</label>
+                <input
+                        required
+                        type="text"
+                        class="form-control"
+                        id="maSV"
+                        name="maSV"
+                        th:field="*{maSV}"
+                        placeholder="21IT363">
             </div>
-            <button type="submit" class="mt-2 btn btn-primary w-50">Thêm</button>
-        </form>
-    </div>
+            <div class="form-group">
+                <label class="my-2" for="hoVaTen">Họ và tên</label>
+                <input
+                        required
+                        type="text"
+                        class="form-control"
+                        id="hoVaTen"
+                        name="hoVaTen"
+                        th:field="*{hoVaTen}"
+                        placeholder="Hồ Đăng Nguyện">
+            </div>
+            <div class="form-group">
+                <label class="my-2" for="email">Email</label>
+                <input
+                        required
+                        type="email"
+                        class="form-control"
+                        id="email"
+                        name="email"
+                        th:field="*{email}"
+                        placeholder="hdnguyen.dev@gmail.com">
+            </div>
+            <div class="form-group">
+                <label class="my-2" for="soDT">Số Điện Thoại</label>
+                <input
+                        required
+                        type="text"
+                        class="form-control"
+                        id="soDT"
+                        name="soDT"
+                        th:field="*{soDT}"
+                        placeholder="0387672103">
+            </div>
+            <div class="form-group">
+                <label class="my-2" for="diaChi">Địa chỉ</label>
+                <input
+                        required
+                        type="text"
+                        class="form-control"
+                        id="diaChi"
+                        name="diaChi"
+                        th:field="*{diaChi}"
+                        placeholder="Đà Nẵng">
+            </div>
+
+        </div>
+        <div class="col-md-6 my-2">
+            <div class="form-group w-100 h-100">
+                <label for="input-img" class="img-preview">
+                    <i class="fas fa-cloud-upload-alt text-black"></i>
+                    <span class="text-black">Upload to preview image</span>
+                </label>
+                <input type="file" name="file" hidden id="input-img" accept="image/*" >
+            </div>
+        </div>
+        <button type="submit" class="btn btn-outline-primary my-2 col-md-12 p-2 ">Thêm</button>
+    </form>
 </div>
+<th:block layout:fragment="script">
+    <script>
+        const inputImg = document.querySelector('#input-img')
+        inputImg.addEventListener('change', (e) => {
+            let file = e.target.files[0]
 
+            if (!file) return
 
-<script>
-</script>
+            let img = document.createElement('img')
+            img.src = URL.createObjectURL(file)
+
+            document.querySelector('.img-preview').appendChild(img)
+        })
+    </script>
+
+</th:block>
 </body>
