--- a/src/main/resources/templates/sinhvien/sinhvien-detail.html
+++ b/src/main/resources/templates/sinhvien/sinhvien-detail.html
@@ -10,36 +10,34 @@
 <body>
 <div layout:fragment="mainContent">
     <h1 class="mt-4">Chi tiết sinh viên</h1>
-    <div class="card mb-4">
-        <div class="card-header">
-            <div class="table-responsive">
-                <table class="table table-striped">
-                    <thead>
-                    <tr>
-                        <th>Mã Sinh Viên</th>
-                        <th>Họ và tên</th>
-                        <th>Email</th>
-                        <th>Số điện thoại</th>
-                        <th>Địa chỉ</th>
-                    </tr>
-                    </thead>
+    <div class="mb-4">
+        <div class="row">
+            <div class="col-lg-2 col-md-4 d-flex align-items-center">
+                <img onerror="this.src='/uploads/avatar-default.png';" th:src="@{/uploads/{avatar}(avatar=${sinhvien.avatar})}" class="w-100 my-2 ms-2">
+            </div>
+            <div class="col-lg-10 col-md-7 ">
+                <h5 class="form-label ms-2 my-2">Mã Sinh Viên</h5>
+                <input class="form-control" th:value="${sinhvien.maSV}">
 
-                    <tbody>
-                    <tr>
-                        <td th:text="${sinhvien.maSV}"></td>
-                        <td th:text="${sinhvien.hoVaTen}"></td>
-                        <td th:text="${sinhvien.email}"></td>
-                        <td th:text="${sinhvien.soDT}"></td>
-                        <td th:text="${sinhvien.diaChi}"></td>
+                <h5 class="form-label ms-2 my-2">Họ và tên</h5>
+                <input class="form-control  " th:value="${sinhvien.hoVaTen}">
 
-                    </tr>
-                </table>
+                <h5 class="form-label ms-2 my-2">Email</h5>
+                <input class="form-control  " th:value="${sinhvien.email}">
+
+                <h5 class="form-label ms-2 my-2">Số điện thoại</h5>
+                <input class="form-control  " th:value="${sinhvien.soDT}">
+
+                <h5 class="form-label ms-2 my-2">Địa chỉ</h5>
+                <input class="form-control " th:value="${sinhvien.diaChi}">
+
             </div>
         </div>
-        <div class="card-body">
+        <div class="row mt-5">
             <div class="table-responsive">
                 <h5>Danh sách tốt nghiệp
-                    <a th:href="@{/sinhvien/{sinhvienId}/totnghiep-add(sinhvienId=${sinhvien.maSV})}" class="btn btn-outline-primary float-end"><i class="fa-solid fa-plus"></i> Thêm</a>
+                    <a th:href="@{/sinhvien/{sinhvienId}/totnghiep-add(sinhvienId=${sinhvien.maSV})}"
+                       class="btn btn-outline-primary float-end"><i class="fa-solid fa-plus"></i> Thêm</a>
                 </h5>
 
                 <table class="table table-striped">
@@ -47,7 +45,7 @@
                     <tr>
                         <th>Mã Trường</th>
                         <th>Mã Ngành</th>
-                        <th>Hệ tốt nghiệp </th>
+                        <th>Hệ tốt nghiệp</th>
                         <th>Ngày tốt nghiệp</th>
                         <th>Loại tốt nghiệp</th>
                     </tr>
@@ -66,7 +64,8 @@
             </div>
             <div class="table-responsive">
                 <h5>Danh sách công việc
-                    <a th:href="@{/sinhvien/{sinhvienId}/congviec-add(sinhvienId=${sinhvien.maSV})}" class="btn btn-outline-primary float-end"><i class="fa-solid fa-plus"></i> Thêm</a>
+                    <a th:href="@{/sinhvien/{sinhvienId}/congviec-add(sinhvienId=${sinhvien.maSV})}"
+                       class="btn btn-outline-primary float-end"><i class="fa-solid fa-plus"></i> Thêm</a>
                 </h5>
                 <table class="table table-striped">
                     <thead>
